Closed
Bug 1525582
Opened 7 years ago
Closed 7 years ago
OrientationPendingPromise must resolve after the change event fires
Categories
(Core :: DOM: Device Interfaces, defect, P3)
Core
DOM: Device Interfaces
Tracking
()
RESOLVED
FIXED
mozilla67
| Tracking | Status | |
|---|---|---|
| firefox67 | --- | fixed |
People
(Reporter: jyherman, Assigned: marcosc)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.14; rv:64.0) Gecko/20100101 Firefox/64.0
Steps to reproduce:
As covered in this PR, the pending promise should only resolve after the event is fired https://github.com/w3c/screen-orientation/pull/147
The issue was first raised here https://github.com/w3c/screen-orientation/issues/120 and there is further discussion in the promises guide https://github.com/w3ctag/promises-guide/issues/57
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → mcaceres
| Assignee | ||
Updated•7 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Priority: -- → P3
| Assignee | ||
Updated•7 years ago
|
Summary: Resolve the screen orientation pending promise after the change event is fired → OrientationPendingPromise must resolve after the change event fires
| Assignee | ||
Comment 1•7 years ago
|
||
spec was changed so promise resolves after the event fires.
| Assignee | ||
Comment 2•7 years ago
|
||
Pushed by mcaceres@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/60cf625574a9
Resolve OrientationPendingPromise after change event fires r=baku
Comment 4•7 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
status-firefox67:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla67
You need to log in
before you can comment on or make changes to this bug.
Description
•