Bug 1525582 - Resolve OrientationPendingPromise after change event fires r=baku

spec was changed so promise resolves after the event fires.

Differential Revision: https://phabricator.services.mozilla.com/D19612

--HG--
extra : moz-landing-system : lando